--- a/about.html
+++ b/about.html
@@ -26,8 +26,25 @@
         <div class="info">
             <div class="container">
                 <div class="row">
+                    <div class="col-md-12">
+                        <p>SAS plays BCC was founded by Sreyas Ravi, Alex Steel, and Sanjay Ravi in the summer 
+                            of 2014. We play a variety of genres of music, from heavy rock, to pop rock, 
+                            classical, and more! We started out as a string trio from South Brunswick High 
+                            School, and have been recognized throughout the music program in the township. In 
+                            May 2015, we won first place at a competition in East Brunswick and have been 
+                            invited to play at many other events. We would like to entertain many others like 
+                            we have done in the past several months for any special event. We do many gigs from 
+                            small social gatherings to large parties. Our goal is to make sure that your events 
+                            make a long lasting affect on those that attend and on you, the host. Thank you for 
+                            choosing us as your live entertainment!
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="row">
                     <div class="col-md-4">
-                        <p>Hey</p>
+                        <h3>Sanjay Ravi</h3>
+                        <p></p>
                     </div>
 
                     <div class="col-md-4">
