Editing some stuff

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>SAS plays BCC was founded by Sreyas Ravi, Alex Steel, and Sanjay Ravi in the summer 
+                        <p class="overview">SAS plays BCC was founded by Sreyas Ravi, Alex Steel, and Sanjay Ravi in the summer 
                             of 2014. We play a variety of genres of music, from heavy rock, to pop rock, 
                             classical, and more! We started out as a string trio from South Brunswick High 
                             School, and have been recognized throughout the music program in the township. In 
@@ -40,19 +40,23 @@
                         </p>
                     </div>
                 </div>
-                
-                <div class="row">
+
+                <div class="row" id="rowTwo">
                     <div class="col-md-4">
-                        <h3>Sanjay Ravi</h3>
-                        <p></p>
+                        <h3 class="player-name">Sreyas Ravi</h3>
+                        <p>A student from South Brunswick who has been playing the bass for 10 years. Sanjay plays in the South Brunswick Chamber Orchestra and Jazz Band. He has played at Kimmel Center and Alice Tully Hall at Lincoln Center in the past year with the Chamber Orchestra.
+                        </p>
                     </div>
 
                     <div class="col-md-4">
-                        <p>Hey1</p>
+                        <h3 class="player-name">Alex Steel</h3>
+                        <p>A student from South Brunswick who has been playing the cello for 10 years. Plays in the South Brunswick Chamber Orchestra, and has done solo work at Carnegie Hall and Merkin Concert halls. Has played at Alice Tully Hall at Lincoln Center and Kimmel Center with the Chamber Orchestra.</p>
                     </div>
 
                     <div class="col-md-4">
-                        <P>Hey2</p>
+                        <h3 class="player-name">Sanjay Ravi</h3>
+                        <p>A student from South Brunswick who has been playing the cello for 10 years. Plays in the South Brunswick Chamber Orchestra. Has played at Alice Tully Hall at Lincoln Center and Kimmel Center with the Chamber Orchestra.</p>
+
                     </div>
                 </div>
             </div>
