--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 <div class="row" id="rowTwo">
                     <div class="col-md-4">
                         <h3 class="player-name">Sreyas Ravi</h3>
-                        <p>A student from South Brunswick who has been playing the bass for 10 years. Sanjay plays in the South Brunswick Chamber Orchestra and Jazz Band. He has played at Kimmel Center and Alice Tully Hall at Lincoln Center in the past year with the Chamber Orchestra.
+                        <p>A student from South Brunswick who has been playing the bass for 10 years. Sreyas plays in the South Brunswick Chamber Orchestra and Jazz Band. He has played at Kimmel Center and Alice Tully Hall at Lincoln Center in the past year with the Chamber Orchestra.
                         </p>
                     </div>
 
