--- a/rates.html
+++ b/rates.html
@@ -8,6 +8,7 @@
 	</head>
 
 	<body>
+
 		<div class="header">
             <h1>SAS Plays BCC</h1>
         </div>
@@ -21,6 +22,28 @@
                 </ul>
             </div>
         </div>
+
+        <div class="rates">
+        	<div class="container">
+        		<div class="row">
+        			<div class="col-md-12">
+        				<h1 id="underline">Rates</h1>
+        			</div>
+        		</div>
+
+        		<div class="row">
+        			<div class="col-md-6">
+        				<p>Standard Party</p>
+        				<p>(Graduation parties, birthday parties, etc.)</p>
+        			</div>
+        			<div class="col-md-6">
+        				<p>$300</p>
+        			</div>
+        		</div>
+
+        	</div>
+        </div>
+
 	</body>
 
 </html>
