--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                             we have done in the past several months for any special event. We do many gigs from 
                             small social gatherings to large parties. Our goal is to make sure that your events 
                             make a long lasting affect on those that attend and on you, the host. Thank you for 
-                            choosing us as your live entertainment!
+                            choosing us as your source of live entertainment!
                         </p>
                     </div>
                 </div>
@@ -45,6 +45,7 @@
                     <div class="col-md-4">
                         <h3 class="player-name">Sreyas Ravi</h3>
                         <p>A student from South Brunswick who has been playing the bass for 9 years. Sreyas plays in the South Brunswick Chamber Orchestra and Jazz Band. He has played at Kimmel Center and Alice Tully Hall at Lincoln Center in the past year with the Chamber Orchestra.
+                        <h3 class= "contact">Contact</h3>
                         </p>
                     </div>
 
