--- a/about.html
+++ b/about.html
@@ -45,7 +45,10 @@
                     <div class="col-md-4">
                         <h3 class="player-name">Sreyas Ravi</h3>
                         <p>A student from South Brunswick who has been playing the bass for 9 years. Sreyas plays in the South Brunswick Chamber Orchestra and Jazz Band. He has played at Kimmel Center and Alice Tully Hall at Lincoln Center in the past year with the Chamber Orchestra.
-                        <h3 class= "contact">Contact</h3>
+                        </p>
+                        <p>
+                        This is an email link:
+                        <a href="mailto:reyravi98@gmail.com" target="_top">Send Mail</a>
                         </p>
                     </div>
 
