--- a/about.html
+++ b/about.html
@@ -54,13 +54,20 @@
 
                     <div class="col-md-4">
                         <h3 class="player-name">Alex Steel</h3>
-                        <p>A student from South Brunswick who has been playing the cello for 9 years. Plays in the South Brunswick Chamber Orchestra, and has done solo work at Carnegie Hall and Merkin Concert halls. Has played at Alice Tully Hall at Lincoln Center and Kimmel Center with the Chamber Orchestra.</p>
+                       <p>A student from South Brunswick who has been playing the cello for 9 years. Plays in the South Brunswick Chamber Orchestra, and has done solo work at Carnegie Hall and Merkin Concert halls. Has played at Alice Tully Hall at Lincoln Center and Kimmel Center with the Chamber Orchestra.</p>
+                       <p>
+                        E-mail:
+                        <a href="mailto:alexanderdsteel732@gmail.com" target="_top">alexanderdsteel732@gmail.com</a>
+                        </p>
                     </div>
 
                     <div class="col-md-4">
                         <h3 class="player-name">Sanjay Ravi</h3>
                         <p>A student from South Brunswick who has been playing the cello for 9 years. Plays in the South Brunswick Chamber Orchestra. Has played at Alice Tully Hall at Lincoln Center and Kimmel Center with the Chamber Orchestra.</p>
-
+                        <p>
+                        E-mail:
+                        <a href="mailto:sanjayravi16@gmail.com" target="_top">sanjayravi16@gmail.com</a>
+                        </p>
                     </div>
                 </div>
             </div>
