--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="rates.html">Rates and Booking</a></li>
+                    <li><a href= "bookanevent.html" >Book An Event</a></li>
                 </ul>
             </div>
         </div>
