--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="rates.html">Rates and Booking</a></li>
+                    <li><a href="rates.html">Rates and Events</a></li>
                     <li><a href= "bookanevent.html" >Book An Event</a></li>
                 </ul>
             </div>
