--- a/bookanevent.html
+++ b/bookanevent.html
@@ -17,7 +17,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="#">Rates and Booking</a></li>
+                    <li><a href="rates.html">Rates and Events</a></li>
+                    <li><a href="#">Book An Event</a></li>
                 </ul>
             </div>
         </div>
