--- a/rates.html
+++ b/rates.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="#">Rates and Booking</a></li>
+                    <li><a href="bookanevent.html">Book An Event</a></li>
                 </ul>
             </div>
         </div>
