--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About Us</a></li>
                     <li><a href="rates.html">Rates and Booking</a></li>
+                    <li><a href="bookanevent.html">Book An Event</a></li>
                 </ul>
             </div>
         </div>
