--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About Us</a></li>
-                    <li><a href="rates.html">Rates and Booking</a></li>
+                    <li><a href="rates.html">Rates and Events</a></li>
                     <li><a href="bookanevent.html">Book An Event</a></li>
                 </ul>
             </div>
