--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
             <figure>
                 <img src="image2.jpg"/>
             </figure> 
-
+            <figure>
+                <<iframe width="560" height="315" src="https://www.youtube.com/embed/IgI3NOo25Do" frameborder="0" allowfullscreen></iframe>
+            </figure>
+            <figure>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IgI3NOo25Do" frameborder="0" allowfullscreen></iframe>
+            </figure>
             <!-- more figures here as needed -->
         </div>    
 
