--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <<iframe width="560" height="315" src="https://www.youtube.com/embed/IgI3NOo25Do" frameborder="0" allowfullscreen></iframe>
             </figure>
             <figure>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IgI3NOo25Do" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Z8LNgKcUuZM" frameborder="0" allowfullscreen></iframe>
             </figure>
             <!-- more figures here as needed -->
         </div>    
